@@ -1,4 +1,5 @@
 Changes in version 0.0.6 - UNRELEASED:
+ * Add back the old release MAR signing key.
 
 Changes in version 0.0.5 - 2017-04-13:
  * Bug 21764: Use bubblewrap's `--die-with-parent` when supported.
